--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,17 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "^1.13",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.17|^2",
         "symfony/framework-bundle": "5.4.*",
         "symfony/runtime": "5.4.*",
+        "symfony/security-bundle": "5.4.*",
         "symfony/yaml": "5.4.*"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.36"
     },
     "config": {
         "allow-plugins": {
@@ -30,12 +33,12 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "Arch\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests/"
+            "Arch\\Tests\\": "tests/"
         }
     },
     "replace": {
