--- a/config/services.yaml
+++ b/config/services.yaml
@@ -10,10 +10,13 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-
+    
+    _instanceof:
+        Arch\Application\Middlewares\MiddlewareInterface:
+            tags: ['arch.command.middleware']
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
-    App\:
+    Arch\:
         resource: '../src/'
         exclude:
             - '../src/DependencyInjection/'
@@ -22,3 +25,35 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    
+    Arch\Application\CommandHandler\:
+        resource:   '../src/Application/CommandHandler/*'
+        tags: ['arch.command.handler']
+    
+    Arch\Application\Events\Handler\:
+        resource:   '../src/Application/Events/Handler/*'
+        tags:   ['arch.event.handler']
+
+    arch.event.bus:
+        class:  Arch\Application\Events\EventBus
+        arguments:
+            - !tagged_iterator 'arch.event.handler'
+
+    arch.command_bus.middleware:
+        class: Arch\Application\Middlewares\CommandBusMiddleware
+        arguments:
+            - !tagged_iterator arch.command.handler
+            - '@logger'
+    
+    Arch\Application\Middlewares\CommandDispatcher:
+        arguments:
+            - !tagged_iterator arch.command.middleware
+            - '@logger'
+            - '@arch.event.bus'
+            - '@arch.command_bus.middleware'
+
+    
+    Arch\Application\Middlewares\CommandBusMiddleware:
+        arguments:
+            - !tagged_iterator arch.command.handler
+            - '@logger'
