--- a/config/services.yaml
+++ b/config/services.yaml
@@ -14,6 +14,8 @@ services:
     _instanceof:
         Arch\Application\Middlewares\MiddlewareInterface:
             tags: ['arch.command.middleware']
+        Arch\Infrastructure\Middlewares\HttpRequestMiddleware:
+            tags: ['arch.http_request.middleware']
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     Arch\:
@@ -55,8 +57,19 @@ services:
             - '@service_container'
             - !tagged_iterator arch.command.middleware
 
+    arch.http.middleware_resolver:
+        class:  Arch\Infrastructure\Middlewares\HttpMiddlewareResolver
+        arguments:
+            - '@service_container'
+            - !tagged_iterator arch.http_request.middleware
 
     Arch\Application\CommandBus:
         arguments:
             - '@arch.app.middleware_resolver'
             - '@logger'
+
+
+    Arch\Infrastructure\EventSubscriber\RequestSubscriber:
+        arguments:
+            - '@arch.http.middleware_resolver'
+            - ''
