setting up bucket file upload system

--- a/.env
+++ b/.env
@@ -16,4 +16,8 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=1082e2c08ac1e09268688c37462aac85
+BUCKET_KEY=media_bucket
+BUCKET_DEST=media/files
+BUCKET_URL_KEY=bucket_url
+HOST_URL=http://localhost:8000/
 ###< symfony/framework-bundle ###
