--- a/config/services.yaml
+++ b/config/services.yaml
@@ -3,14 +3,18 @@
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
+imports:
+    - { resource:   bucket/bucket-parameters.yaml }
 parameters:
-
+    host_url:   '%env(HOST_URL)%'
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-    
+        bind:
+            $host:  '%host_url%'
+
     _instanceof:
         Arch\Application\Middlewares\MiddlewareInterface:
             tags: ['arch.command.middleware']
