--- a/config/services.yaml
+++ b/config/services.yaml
@@ -14,6 +14,7 @@ services:
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
         bind:
             $host:  '%host_url%'
+            Arch\Domain\Repository\MessageRepositoryInterface: '@Arch\Infrastructure\Repository\InMemoryMessageRepository'
 
     _instanceof:
         Arch\Application\Middlewares\MiddlewareInterface:
