setting up doctrine migration bundle

--- a/.env
+++ b/.env
@@ -20,4 +20,5 @@ BUCKET_KEY=media_bucket
 BUCKET_DEST=media/files
 BUCKET_URL_KEY=bucket_url
 HOST_URL=http://localhost:8000/
+DATABASE_URL="mysql://root:admin@127.0.0.1:3307/symfonydb?serverVersion=mariadb-5.7.41"
 ###< symfony/framework-bundle ###
