--- a/config/services.yaml
+++ b/config/services.yaml
@@ -29,7 +29,7 @@ services:
         resource: '../src/'
         exclude:
             - '../src/DependencyInjection/'
-            - '../src/Entity/'
+            - '../src/Infrastructure/Entity/'
             - '../src/Kernel.php'
 
     # add more service definitions when explicit configuration is needed
