--- a/.env
+++ b/.env
@@ -39,8 +39,8 @@ MAILER_DSN=smtp://localhost:1025
 ###> symfony/messenger ###
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
-# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+ MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+#MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailgun-mailer ###
