--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -47,6 +47,8 @@ security:
         - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/login$,       roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register$,       roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/,       roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
     security:
