--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/orm": "^2.11",
         "league/commonmark": "^2.4",
         "lexik/jwt-authentication-bundle": "^2.18",
+        "ramsey/uuid": "^4.2",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.17|^2",
